--- a/src/components/Jokes.scss
+++ b/src/components/Jokes.scss
@@ -28,6 +28,7 @@
             margin: 10px 0;
             padding: 20px;
             list-style: none;
+            position: relative;
         }
 
         .category-content {
@@ -37,6 +38,14 @@
             &__icon {
                 height: 100%;
                 margin-right: 10px;
+            }
+
+            &__date {
+                color: gray;
+                font-size: 12px;
+                position: absolute;
+                top: 5px;
+                right: 5px;
             }
         }
     }
