--- a/src/App.scss
+++ b/src/App.scss
@@ -16,8 +16,26 @@
         color: white;
         font-weight: bold;
         margin: 10px 0;
-        font-size: 20px;
-        text-transform: capitalize;
+        font-size: 16px;
+        text-transform: uppercase;
+    }
+
+    .box-title {
+        background-color: lightblue;
+        padding: 15px 20px;
+        border-radius: 5px;
+        border: 5px solid white;
+        margin: 10px 0;
+        
+        h2 {
+            color: white;
+            margin: 0px;
+
+        }
+
+        &__name {
+            color: #268fb2;
+        }
     }
 }
 
