Create warning message component and use it to show if the number of jokes finish

--- a/src/components/ErrorMessage.scss
+++ b/src/components/ErrorMessage.scss
@@ -2,10 +2,10 @@
     background-color: lightcoral;
     padding: 15px 20px;
     border-radius: 5px;
-    border: 1px solid #f16767;
+    border: 1px solid lightsalmon;
 
     h2 {
-        color: brown;
+        color: darkred;
         margin: 0;
     }
 }
